# bitcq_msg

./: CMakeLists.txt  README.md  package.xml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/sort_track_msg/include/sort_track_msg/msg/: bounding_box.h  rosidl_generator_c__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h  target.hpp  tracks.hpp
install/sort_track_msg/include/sort_track_msg/msg/detail/: bounding_box__functions.c  bounding_box__functions.h  bounding_box__rosidl_typesupport_introspection_c.h  bounding_box__rosidl_typesupport_introspection_cpp.hpp  bounding_box__type_support.c  bounding_box__type_support.h  target__functions.c  target__functions.h  target__rosidl_typesupport_fastrtps_c.h  target__rosidl_typesupport_fastrtps_cpp.hpp  target__rosidl_typesupport_introspection_c.h  target__struct.h  (+15 more)
install/sort_track_msg/share/sort_track_msg/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/sort_track_msg/share/sort_track_msg/cmake/: ament_cmake_export_include_directories-extras.cmake  sort_track_msgConfig.cmake  sort_track_msg__rosidl_generator_cExport-noconfig.cmake  sort_track_msg__rosidl_typesupport_cExport-noconfig.cmake  sort_track_msg__rosidl_typesupport_cppExport-noconfig.cmake  sort_track_msg__rosidl_typesupport_cppExport.cmake
install/sort_track_msg/share/sort_track_msg/msg/: Target.msg  Targets.idl
log/: latest_build
msg/: AFFusion.msg  Area.msg  AreaData.msg  BoundingBox.msg  BoundingBox2D.msg  CameraRadar.msg  Detector2D.msg  Detector2DArray.msg  Fusion.msg  FusionTarget.msg  MecTarget.msg  ObjectHypothesis.msg  Quene.msg  QueneData.msg  Queue.msg  QueueData.msg  Radar.msg  RadarTarget.msg  Section.msg  SectionData.msg  Trace.msg  TraceTarget.msg  TrackTarget.msg  TrackTargets.msg  Transform.msg
